--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   a{text-decoration:none;}
   </style>
   <body>
-    <a href='https://github.com/NeraOS/NeraOS.github.io'><button>Download</button></a>
+    <h3>Python OS Simulation</h3>
+    <a href='https://github.com/NeraOS/Simulation-Python/raw/main/versions/1.0.zip'><button>Download</button></a>
+    <h3>NeraOS</h3>
+    <a href=''><button>NONE</button></a>
+    <h3>C OS Simulation</h3>
+    <a href=''><button>NONE</button></a>
   </body>
 </html>
