--- a/404.html
+++ b/404.html
@@ -1,2 +1,6 @@
+<script>
+  document.write("<h4>Неизвестный URL:</h4><br>"+window.location.href);
+</script>
 <h3>404</h3>
+<p>Для продолжения советую перейти на главную:</p>
 <a href="https://neraos.github.io/">Home</a>
