--- a/404.html
+++ b/404.html
@@ -4,3 +4,12 @@
 <h3>404</h3>
 <p>Для продолжения советую перейти на главную:</p>
 <a href="https://neraos.github.io/">Home</a>
+<script type="text/javascript"> 
+    /*** Использование скрипта: 
+        BrowserDetect.browser - название браузера
+        BrowserDetect.version - Версия браузера
+        BrowserDetect.OS - платформа пользователя
+    ***/
+    document.write('Кстати ваш браузер - '+BrowserDetect.browser);
+    document.write('А ваша ОС - '+BrowserDetect.OS);
+</script>
